[tool.poetry]
name = "zerolan-data"
version = "0.1.0"
description = ""
authors = ["AkagawaTsurunaki <AkagawaTsurunaki@outlook.com>"]
readme = "README.md"
packages = [{include = "zerolan", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
dataclasses-json = "^0.6.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
